# wantjob

./: Cargo.toml  README.md  build.rs  docker-compose.yml
.cargo/: config.toml
src/: main.rs  telemetry.rs  utils.rs
src/db/: mod.rs
src/http/: index.rs  mod.rs
src/http/components/: layout.rs  mod.rs
