cargo-features = ["profile-rustflags", "codegen-backend"]

[package]
name = "wantjob"
version = "0.0.0"
edition = "2021"
description = "Want job? Get job!"
license = "AGPL-3.0"
homepage = "https://github.com/MNThomson/wantjob"

[features]

[profile.release]
codegen-units = 1
lto = "fat"

[profile.dev-fast]
inherits = "dev"
codegen-backend = "cranelift"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]

[dependencies]
anyhow = { version = "1.0.75" }
axum = { version = "0.7" }
leptos = { version = "0.5.4", features = ["ssr"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.34", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "fs", "catch-panic"] }
rust-embed = { version = "8.1.0", features = ["axum", "mime_guess"] }
mime_guess = "2.0.4"
rustc_version = "0.4.0"
gethostname = "0.4.3"
minify-html = "0.15.0"

# O11Y
opentelemetry = { version = "0.21.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14.0", features = ["tonic", "metrics", "tls-roots"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-opentelemetry = { version = "0.22.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = "0.9.0"

# Misc

[build-dependencies]
rusqlite = "0.29.0"
